<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvLabel"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:id="@+id/linear_layout_options"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_below="@id/tvLabel"
        android:layout_centerHorizontal="true">

        <RadioGroup
            android:id="@+id/radioGroupPlanning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton android:id="@+id/radio_hangout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hangout"
                android:checked="true"/>
            <RadioButton android:id="@+id/radio_meetup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meetup" />
            <RadioButton android:id="@+id/radio_party"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/party" />
            <RadioButton android:id="@+id/radio_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_free" />
        </RadioGroup>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/description_text_input_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:layout_below="@id/linear_layout_options">

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:hint="@string/questionary_description"
        style="@style/CustomeFont"
        android:maxLength="106"
        android:textSize="20sp"
        android:textColorHighlight="@color/colorPrimary"
        android:inputType="textMultiLine"
        android:textStyle="normal"
        />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvCharacterCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:paddingTop="4dp"
        tools:text="120"
        android:layout_alignBaseline="@+id/btnNext"
        android:layout_alignBottom="@+id/btnNext"
        android:layout_toLeftOf="@+id/btnNext"
        android:layout_toStartOf="@+id/btnNext"
        android:layout_marginEnd="12dp"
        style="@style/CustomeFont"
        android:textSize="17sp"
        />

    <Button
        android:text="Next"
        style="@style/QuestionaryButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="5dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="6dp"
        android:id="@+id/btnNext" />


</RelativeLayout>
